apps/jellyfin/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin.licht`)
      services:
        - name: jellyfin-service
          port: 8096
  tls:
    secretName: jellyfin-tls
